# plrs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: main.yml
plrs/: __init__.py
scripts/: build.sh
src/: lexer.rs  lib.rs  tokenizer.rs  tokens.rs
tests/: test_plrs.py
